# DBtoDRF

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  config.sample.yaml  pyproject.toml
drf_auto_generator/: ast_codegen_main.py  cli.py  codegen.py  codegen_utils.py  colored_logging.py  config.py  config_manager.py  config_validation.py  constants.py  exceptions.py  generate_tests_using_ast.py  generate_tests_using_ast_new.py  introspection_django.py  mapper.py  openapi_gen.py  test_codegen_utils.py  validators.py
drf_auto_generator/ast_codegen/: __init__.py  admin.py  base.py  code_generator.py  models.py  project_files.py  schemathesis_tests.py  serializers.py  urls.py  views.py
drf_auto_generator/domain/: __init__.py  constraints.py  field_mapping.py  models.py  naming.py  relationships.py
drf_auto_generator/templates/: .env.j2  .gitignore.j2  admin.py.j2  api_test.py.j2  apps.py.j2  asgi.py.j2  manage.py.j2  models.py.j2  requirements.txt.j2  root_urls.py.j2  serializers.py.j2  settings.py.j2  urls.py.j2  views.py.j2  wsgi.py.j2
examples/simple_blog/: README.md  docker-compose.yml  simple_blog.sql  simple_blog_db_config.yaml  test_data.sql
tests/: .coveragerc  conftest.py  test_admin.py  test_generation.py  test_models.py  test_openapi_gen_integration.py  test_openapi_gen_unit.py  test_project_files.py  test_serializers.py  test_urls.py  test_views.py
tests/config_templates/: test_config.yaml.j2
