# File: pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["drf_auto_generator"]
# package-data = {
#     include = ["drf_auto_generator/templates/*"],
#     exclude = ["drf_auto_generator/templates/node_modules/*"],
# }

[project]
name = "drf-auto-generator"
version = "0.2.0" # Version using Django introspection
description = "Tool to automatically generate a Django REST Framework API from a database schema using Django introspection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mahesh Babu Gorantla", email = "maheshbabugorantla@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database",
    "Framework :: Django",
    "Framework :: Django REST Framework",
]
dependencies = [
    "django == 5.2.4", # Core dependency now
    "djangorestframework >= 3.13",
    "drf-spectacular >= 0.24",
    "PyYAML >= 6.0",
    "jinja2 >= 3.0",
    "inflect >= 7.0", # For pluralization
    "pydantic >= 2.11.7",
    "black >= 25.0",
    "Faker >= 37.0.0",
    "astor >= 0.8.1",
    "libcst>=1.8.2",
    "coverage>=7.9.2",
    "schemathesis>=4.0.5",
    "hypothesis>=6.135.26",
    "requests>=2.32.3",
]

[project.scripts]
drf-generate = "drf_auto_generator.cli:main"

[project.optional-dependencies]
# List drivers Django might need - user must install the correct one(s)
postgres = ["psycopg2-binary"]
mysql = ["mysqlclient"] # Or other compatible mysql drivers
mssql = ["django-mssql-backend", "pyodbc"] # Example, check current recommendations
dev = [
    'ipython',
    'pdbpp',
    "black",
    "flake8",
    "mypy",
    "pytest",
    "isort",
    "testcontainers",
    "pre-commit",
    "pre-commit-hooks",
    "ruff",
    "python-dotenv",
    "Faker",
]

[dependency-groups]
dev = [
    "ipython>=8.36.0",
    "pdbpp>=0.11.6",
]
